# AutoThemeWin10

./: .gitignore  README.md  autothemewin10.py  pyproject.toml  setup.py
autothemewin10/: __init__.py  main.py
